[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/03_game/UI/UI.gd" type="Script" id=1]

[node name="UI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -87.0
margin_bottom = 70.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="HBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 77.0
margin_bottom = 60.0

[node name="BiomassCounter" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 67.0
margin_bottom = 14.0

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/BiomassCounter"]
margin_right = 55.0
margin_bottom = 14.0
text = "Biomass"

[node name="BiomassLabel" type="Label" parent="MarginContainer/HBoxContainer/BiomassCounter"]
margin_left = 59.0
margin_right = 67.0
margin_bottom = 14.0
text = "0"

[node name="OreCounter" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_top = 18.0
margin_right = 67.0
margin_bottom = 32.0

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/OreCounter"]
margin_right = 24.0
margin_bottom = 14.0
text = "Ore"

[node name="OreLabel" type="Label" parent="MarginContainer/HBoxContainer/OreCounter"]
margin_left = 28.0
margin_right = 36.0
margin_bottom = 14.0
text = "0"

[node name="GasCounter" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_top = 36.0
margin_right = 67.0
margin_bottom = 50.0

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/GasCounter"]
margin_right = 24.0
margin_bottom = 14.0
text = "Gas"

[node name="GasLabel" type="Label" parent="MarginContainer/HBoxContainer/GasCounter"]
margin_left = 28.0
margin_right = 36.0
margin_bottom = 14.0
text = "0"
